--- a/src/components/load-range/index.scss
+++ b/src/components/load-range/index.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/index.scss';
+
 .button-container {
 	display: flex;
 	flex-direction: row;
@@ -7,5 +9,9 @@
 
 	&.spaced {
 		justify-content: space-between;
+	}
+
+	& .selected {
+		color: $cs-color-red;
 	}
 }
