--- a/src/components/push-position-stack/index.scss
+++ b/src/components/push-position-stack/index.scss
@@ -119,7 +119,7 @@ $cell-height: 1.7rem;
 	background-color: rgb(153, 152, 152);
 	&.selected {
 		background-color: rgb(95, 95, 95);
-		color: $color-red;
+		color: $cs-color-red;
 	}
 }
 
