--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -20,14 +20,14 @@ body {
 	font-family: 'Open Sans', Helvetica, Tahoma, Arial, sans-serif;
 	font-size: 1rem;
 	line-height: 1.25;
-	color: $color-base;
+	color: $cs-color-base;
 	background: #fff;
 }
 
 a {
 	color: inherit;
 	text-decoration: none;
-	transition: all $timing $easing;
+	transition: all $cs-timing $cs-easing;
 }
 
 img {
