--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -15,43 +15,43 @@
 }
 
 @mixin small-desktop {
-	@media (max-width: #{$small-desktop}) {
+	@media (max-width: #{$cs-small-desktop}) {
 		@content;
 	}
 }
 
 @mixin desktop-only {
-	@media (min-width: $tablet-landscape + 1) {
+	@media (min-width: $cs-tablet-landscape + 1) {
 		@content;
 	}
 }
 
 @mixin tablet-landscape {
-	@media (max-width: #{$tablet-landscape}) {
+	@media (max-width: #{$cs-tablet-landscape}) {
 		@content;
 	}
 }
 
 @mixin tablet-landscape-only {
-	@media (min-width: $tablet-portrait + 1) and (max-width: $tablet-landscape) {
+	@media (min-width: $cs-tablet-portrait + 1) and (max-width: $cs-tablet-landscape) {
 		@content;
 	}
 }
 
 @mixin tablet-portrait {
-	@media (max-width: #{$tablet-portrait}) {
+	@media (max-width: #{$cs-tablet-portrait}) {
 		@content;
 	}
 }
 
 @mixin tablet-portrait-only {
-	@media (min-width: $mobile + 1) and (max-width: $tablet-portrait) {
+	@media (min-width: $cs-mobile + 1) and (max-width: $cs-tablet-portrait) {
 		@content;
 	}
 }
 
 @mixin mobile {
-	@media (max-width: #{$mobile}) {
+	@media (max-width: #{$cs-mobile}) {
 		@content;
 	}
 }
@@ -73,11 +73,11 @@
 	margin: auto;
 }
 
-@mixin transition($properties, $will-change: true, $timing: $timing, $easing: $easing) {
+@mixin transition($properties, $will-change: true, $cs-timing: $cs-timing, $cs-easing: $cs-easing) {
 	$transition: '';
 
 	@each $property in str-split($properties, ',') {
-		$single: $property + ' ' + $timing + ' ' + $easing + ',';
+		$single: $property + ' ' + $cs-timing + ' ' + $cs-easing + ',';
 		$transition: $transition + $single;
 	}
 
