--- a/src/components/wrapper/index.scss
+++ b/src/components/wrapper/index.scss
@@ -58,7 +58,7 @@
 		text-align: center;
 
 		a {
-			color: $color-action;
+			color: $cs-color-action;
 			text-decoration: underline;
 
 			@include hover {
@@ -68,7 +68,7 @@
 	}
 
 	&__error {
-		color: $color-error;
+		color: $cs-color-error;
 		margin: 0;
 
 		&--api {
@@ -83,8 +83,8 @@
 			input,
 			select,
 			textarea {
-				background-color: rgba($color-error, 0.05);
-				border-color: $color-error;
+				background-color: rgba($cs-color-error, 0.05);
+				border-color: $cs-color-error;
 			}
 		}
 
@@ -141,21 +141,23 @@
 		input,
 		select,
 		textarea {
+			resize: vertical;
+
 			font-size: 0.875rem;
 			line-height: 1.2857;
 			width: 100%;
 			height: 48px;
 			padding: 0.875rem 1rem;
-			border: 1px solid color.adjust($color-black, $lightness: 20%);
+			border: 1px solid color.adjust($cs-color-black, $lightness: 20%);
 			border-radius: 0.5rem;
-			background-color: $color-white;
+			background-color: $cs-color-white;
 			box-shadow: none;
-			transition: all $timing $easing;
+			transition: all $cs-timing $cs-easing;
 
 			&:focus {
-				border-color: color.adjust($color-black, $lightness: 40%);
+				border-color: color.adjust($cs-color-black, $lightness: 40%);
 				outline: 0 none;
-				box-shadow: 0 0 0.5rem rgba($color-black, 0.25);
+				box-shadow: 0 0 0.5rem rgba($cs-color-black, 0.25);
 			}
 		}
 
