chore: improve mobile

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,107 +1,155 @@
 @import 'normalize.css';
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 
-	&::before,
-	&::after {
-		box-sizing: inherit;
-	}
+  &::before,
+  &::after {
+    box-sizing: inherit;
+  }
 }
 
 html,
 body,
 #app,
 .o-wrapper {
-	height: 100%;
+  height: 100%;
+  font-family: 'Lato', Arial, Helvetica, Verdana, sans-serif;
 }
 
 body {
-	font-family: 'Open Sans', Helvetica, Tahoma, Arial, sans-serif;
-	font-size: 1rem;
-	line-height: 1.25;
-	color: $cs-color-base;
-	background: #fff;
+  /* 	font-family: 'Open Sans', Helvetica, Tahoma, Arial, sans-serif;
+ */
+  font-family: 'Lato', Arial, Helvetica, Verdana, sans-serif;
+  font-size: 1rem;
+  line-height: 1.25;
+  color: $cs-color-base;
+  background: #fff;
 }
 
 a {
-	color: inherit;
-	text-decoration: none;
-	transition: all $cs-timing $cs-easing;
+  color: inherit;
+  text-decoration: none;
+  transition: all $cs-timing $cs-easing;
 }
 
 img {
-	border: 0;
-	display: inline-block;
-	vertical-align: top;
+  border: 0;
+  display: inline-block;
+  vertical-align: top;
 }
 
 h4 {
-	text-align: center;
+  text-align: center;
 }
 
 .selector-container {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .selector-body {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	padding: 0 20%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20%;
 
-	&.spaced {
-		justify-content: space-between;
-	}
+  &.spaced {
+    justify-content: space-between;
+  }
 }
 .selector {
-	padding: 5px;
-	width: 45px;
-	height: 45px;
-	border: 1px solid rgb(51, 53, 53);
-	border-radius: 100%;
-	margin: 2px;
-	cursor: pointer;
-	font-size: 0.7rem;
-	-webkit-touch-callout: none; /* iOS Safari */
-	-webkit-user-select: none; /* Safari */
-	-khtml-user-select: none; /* Konqueror HTML */
-	-moz-user-select: none; /* Old versions of Firefox */
-	-ms-user-select: none; /* Internet Explorer/Edge */
-	user-select: none; /* Non-prefixed version, currently
+  padding: 5px;
+  width: 45px;
+  height: 45px;
+  border: 1px solid rgb(51, 53, 53);
+  border-radius: 100%;
+  margin: 2px;
+  cursor: pointer;
+  font-size: 0.7rem;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
                             supported by Chrome, Edge, Opera and Firefox */
 
-	&.active {
-		background-color: rgb(63, 60, 60);
-		color: white;
-	}
+  &.active {
+    background-color: rgb(63, 60, 60);
+    color: white;
+  }
 
-	&:disabled {
-		border: 1px solid rgb(162, 163, 163);
-	}
+  &:disabled {
+    border: 1px solid rgb(162, 163, 163);
+  }
 
-	&.not-circle {
-		width: auto;
-		border-radius: 0.3rem;
-	}
+  &.not-circle {
+    width: auto;
+    border-radius: 0.3rem;
+  }
 
-	&.label {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		border: 0px;
-		cursor: default;
-		font-size: 1rem;
-		font-weight: 700;
-	}
+  &.label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 0px;
+    cursor: default;
+    font-size: 1rem;
+    font-weight: 700;
+  }
 }
 
 .content-container {
-	display: flex;
-	flex-direction: row;
-	margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  margin-top: 1rem;
+}
+
+@media only screen and (max-width: 900px) {
+  .content-container {
+    flex-direction: column;
+    & > div {
+      padding-bottom: 10%;
+    }
+    & > div:last-child {
+      width: 100%;
+    }
+  }
+
+  .selector-body {
+    padding: 0;
+    width: 100%;
+
+    &.spaced {
+      justify-content: center;
+    }
+  }
+  .selector {
+    padding: 2px;
+    width: 2.5rem;
+    height: 2.5rem;
+
+    margin: 2px;
+    cursor: pointer;
+    font-size: 0.6rem;
+
+    &.not-circle {
+      width: auto;
+      border-radius: 0.3rem;
+    }
+
+    &.label {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 0px;
+      cursor: default;
+      font-size: 0.7rem;
+      font-weight: 700;
+    }
+  }
 }
