--- a/src/containers/home/index.scss
+++ b/src/containers/home/index.scss
@@ -1,57 +1,88 @@
 @import '../../assets/styles/index.scss';
 
 .cs-container {
-	max-width: 75%;
-	padding-right: 1rem;
-	padding-left: 1rem;
-	margin-right: auto;
-	margin-left: auto;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+  max-width: 75%;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-	& > h1 {
-		text-align: center;
-		margin-bottom: 0px;
-	}
-	margin-bottom: 20px;
+  & > h1 {
+    text-align: center;
+    margin-bottom: 0px;
+  }
+  margin-bottom: 20px;
 }
 
 .cs-sections {
-	width: 100%;
-	display: flex;
-	justify-content: space-around;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 
-	& > h4 {
-		-webkit-touch-callout: none; /* iOS Safari */
-		-webkit-user-select: none; /* Safari */
-		-khtml-user-select: none; /* Konqueror HTML */
-		-moz-user-select: none; /* Old versions of Firefox */
-		-ms-user-select: none; /* Internet Explorer/Edge */
-		user-select: none; /* Non-prefixed version, currently
+  & > h4 {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
                             supported by Chrome, Edge, Opera and Firefox */
 
-		cursor: pointer;
-		width: 100%;
-		background-color: $cs-color-base;
-		color: $cs-color-white;
-		border: 1px solid rgb(156, 155, 155);
-		&:first-child {
-			border-radius: 5px 0 0 5px;
-		}
-		&:last-child {
-			border-radius: 0 5px 5px 0;
-		}
-		padding: 10px;
-		&.active {
-			color: $cs-color-red;
-			border: 1px solid rgb(156, 155, 155);
-		}
-	}
+    cursor: pointer;
+    width: 100%;
+    background-color: $cs-color-base;
+    color: $cs-color-white;
+    border: 1px solid rgb(156, 155, 155);
+    &:first-child {
+      border-radius: 5px 0 0 5px;
+    }
+    &:last-child {
+      border-radius: 0 5px 5px 0;
+    }
+    padding: 10px;
+    &.active {
+      color: $cs-color-red;
+      border: 1px solid rgb(156, 155, 155);
+    }
+  }
 }
 
 .cs-content {
-	height: 80vh;
-	width: 100%;
+  height: 80vh;
+  width: 100%;
+  color: #000;
+}
+
+@media only screen and (max-width: 900px) {
+  .cs-container {
+    max-width: 100%;
+    padding-right: 0rem;
+    padding-left: 0rem;
+  }
+
+  .cs-sections {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    & > h4 {
+      cursor: pointer;
+      width: 100%;
+      margin: 0;
+
+      &:first-child {
+        border-radius: 0px 0 0 0px;
+      }
+      &:last-child {
+        border-radius: 0 0px 0px 0;
+        margin-bottom: 5px;
+      }
+      padding: 5px;
+    }
+  }
 }
