--- a/src/containers/login/index.scss
+++ b/src/containers/login/index.scss
@@ -2,58 +2,66 @@
 
 /* Estilos generales */
 .login-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 60vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 60vh;
 }
 .login-form {
-  max-width: 400px;
-  min-width: 300px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  background-color: #f8f8f8;
+	max-width: 400px;
+	min-width: 300px;
+	margin: 0 auto;
+	padding: 20px;
+	border: 1px solid #ccc;
+	border-radius: 8px;
+	background-color: #f8f8f8;
 }
 
 .login-form h2 {
-  margin-bottom: 20px;
-  color: #333;
+	margin-bottom: 20px;
+	color: #333;
 }
 
 /* Estilos para los campos de entrada */
 .login-form div {
-  margin-bottom: 15px;
+	margin-bottom: 15px;
 }
 
 .login-form label {
-  display: block;
-  font-weight: bold;
-  margin-bottom: 5px;
-  color: #555;
+	display: block;
+	font-weight: bold;
+	margin-bottom: 5px;
+	color: #555;
 }
 
 .login-form input {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+	width: 100%;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
 }
 
 /* Estilos para el botón */
 .login-form button {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+	display: block;
+	width: 100%;
+	padding: 10px;
+	background-color: #007bff;
+	color: white;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: background-color 0.3s;
 }
 
 .login-form button:hover {
-  background-color: #0056b3;
+	background-color: #0056b3;
+	&.disable {
+		background-color: #ccc;
+		cursor: not-allowed;
+	}
+}
+.login-form button.disable {
+	background-color: #ccc;
+	cursor: not-allowed;
 }
